adding js and css

--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
         </nav>
     </header>
     <section>
-        <p>Email: <a href="mailto:mavee@example.com">mavee@example.com</a></p>
+        <p>Email: <a href="mailto:mavee.shah@hotmail.com">mavee.shah@hotmail.com</a></p>
         <p>LinkedIn: <a href="https://www.linkedin.com/in/maveeshah">linkedin.com/in/maveeshah</a></p>
         <p>Fiverr: <a href="https://www.fiverr.com/mavee">fiverr.com/mavee</a></p>
     </section>
