--- a/index.html
+++ b/index.html
@@ -1,22 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mavee's Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mavee Shah | Frappe ERPNext Developer</title>
+  <link rel="stylesheet" href="style.css">
 </head>
+<script src="script.js"></script>
+
 <body>
-    <header>
-        <h1>Welcome to Mavee's Portfolio</h1>
-        <nav>
-            <a href="about.html">About</a>
-            <a href="projects.html">Projects</a>
-            <a href="contact.html">Contact</a>
-        </nav>
-    </header>
-    <section>
-        <p>Hi, I'm Mavee. An experienced ERPNext developer with a passion for building efficient solutions and customizations.</p>
-    </section>
+
+  <header>
+    <h1>👋 Hi, I'm Mavee!</h1>
+    <p>ERPNext Developer | Frappe Enthusiast | Aspiring Software House Owner</p>
+    <nav>
+      <a href="#about">About Me</a>
+      <a href="#skills">Skills</a>
+      <a href="#projects">Projects</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
+
+  <section id="about">
+    <h2>About Me</h2>
+    <p>From Islamabad, Pakistan, I'm a Frappe ERPNext developer with over five years of experience...</p>
+  </section>
+
+  <section id="skills">
+    <h2>Skills & Tools</h2>
+    <ul>
+      <li>Python</li>
+      <li>JavaScript</li>
+      <li>SQL</li>
+      <li>ERPNext</li>
+      <li>Frappe</li>
+    </ul>
+  </section>
+
+  <section id="projects">
+    <h2>Featured Projects</h2>
+    <div class="project">
+      <h3>Advanced Notification Module</h3>
+      <p>Flexible notification system built with React and Frappe backend.</p>
+    </div>
+  </section>
+
+  <section id="contact">
+    <h2>Contact Me</h2>
+    <p>Email: <a href="mailto:mavee.shah@hotmail.com">mavee.shah@hotmail.com</a></p>
+    <p><a href="https://www.linkedin.com/in/ameer-muavia-shah/">LinkedIn</a> | <a href="https://github.com/pythonkage">GitHub</a></p>
+  </section>
+
+  <footer>
+    <p>© 2024 Mavee Shah. All Rights Reserved.</p>
+  </footer>
 </body>
 </html>
