--- a/contact.html
+++ b/contact.html
@@ -1,24 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Get in touch with Ameer Muavia Shah - Software Engineer specializing in ERPNext and Frappe Framework. Open to freelance work and collaborations." />
+  <title>Contact | Ameer Muavia Shah</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    .animate-fade-in {
+      animation: fadeIn 0.6s ease-in-out forwards;
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+    #mobile-menu-button.active span:nth-child(1) {
+      transform: rotate(45deg) translate(5px, 5px);
+    }
+    #mobile-menu-button.active span:nth-child(2) {
+      opacity: 0;
+    }
+    #mobile-menu-button.active span:nth-child(3) {
+      transform: rotate(-45deg) translate(7px, -6px);
+    }
+  </style>
+  <script defer src="script.js"></script>
 </head>
-<body>
-    <header>
-        <h1>Contact Me</h1>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="projects.html">Projects</a>
-        </nav>
-    </header>
-    <section>
-        <p>Email: <a href="mailto:mavee.shah@hotmail.com">mavee.shah@hotmail.com</a></p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/maveeshah">linkedin.com/in/maveeshah</a></p>
-        <p>Fiverr: <a href="https://www.fiverr.com/mavee">fiverr.com/mavee</a></p>
+
+<body class="bg-gray-950 text-gray-100 font-sans antialiased">
+  <header class="sticky top-0 z-50 bg-gray-950/95 backdrop-blur-sm border-b border-gray-800">
+    <div class="flex justify-between items-center px-4 sm:px-8 py-5">
+      <a href="index.html" class="text-2xl font-bold text-emerald-400 hover:text-emerald-300 transition-colors">
+        Ameer Muavia Shah
+      </a>
+      <nav class="hidden md:flex space-x-6 text-gray-300">
+        <a href="index.html" class="hover:text-emerald-400 transition-colors">Home</a>
+        <a href="projects.html" class="hover:text-emerald-400 transition-colors">Projects</a>
+        <a href="about.html" class="hover:text-emerald-400 transition-colors">About</a>
+        <a href="contact.html" class="hover:text-emerald-400 transition-colors active">Contact</a>
+      </nav>
+      <button id="mobile-menu-button" class="md:hidden flex flex-col space-y-1.5 w-6 h-6 focus:outline-none">
+        <span class="block w-full h-0.5 bg-emerald-400 transition-all"></span>
+        <span class="block w-full h-0.5 bg-emerald-400 transition-all"></span>
+        <span class="block w-full h-0.5 bg-emerald-400 transition-all"></span>
+      </button>
+    </div>
+    <nav id="mobile-menu" class="hidden md:hidden border-t border-gray-800 bg-gray-950/98 backdrop-blur-sm">
+      <div class="flex flex-col px-4 py-4 space-y-3">
+        <a href="index.html" class="text-gray-300 hover:text-emerald-400 transition-colors">Home</a>
+        <a href="projects.html" class="text-gray-300 hover:text-emerald-400 transition-colors">Projects</a>
+        <a href="about.html" class="text-gray-300 hover:text-emerald-400 transition-colors">About</a>
+        <a href="contact.html" class="text-gray-300 hover:text-emerald-400 transition-colors active">Contact</a>
+      </div>
+    </nav>
+  </header>
+
+  <main class="max-w-4xl mx-auto py-12 sm:py-20 px-6">
+    <section class="text-center fade-in-on-scroll">
+      <h1 class="text-4xl sm:text-5xl font-bold mb-6 text-emerald-400">Get in Touch</h1>
+      <p class="text-lg text-gray-300 mb-12 max-w-2xl mx-auto">
+        I'm open to freelance work, collaboration, or just tech conversations. Let's build something amazing together!
+      </p>
+
+      <div class="grid sm:grid-cols-3 gap-6 mb-12">
+        <a href="mailto:maveeshah@gmail.com" class="bg-gradient-to-br from-gray-900 to-gray-800 p-6 rounded-2xl border border-gray-800 hover:border-emerald-500/50 hover:shadow-xl hover:shadow-emerald-500/20 transition-all duration-300 hover:-translate-y-1 group">
+          <div class="text-4xl mb-4">📧</div>
+          <h3 class="text-lg font-semibold mb-2 text-emerald-400 group-hover:text-emerald-300 transition-colors">Email</h3>
+          <p class="text-sm text-gray-400 break-all">maveeshah@gmail.com</p>
+        </a>
+
+        <a href="https://github.com/maveeshah" target="_blank" rel="noopener noreferrer" class="bg-gradient-to-br from-gray-900 to-gray-800 p-6 rounded-2xl border border-gray-800 hover:border-emerald-500/50 hover:shadow-xl hover:shadow-emerald-500/20 transition-all duration-300 hover:-translate-y-1 group">
+          <div class="text-4xl mb-4">💼</div>
+          <h3 class="text-lg font-semibold mb-2 text-emerald-400 group-hover:text-emerald-300 transition-colors">GitHub</h3>
+          <p class="text-sm text-gray-400">github.com/maveeshah</p>
+        </a>
+
+        <a href="https://linkedin.com/in/maveeshah" target="_blank" rel="noopener noreferrer" class="bg-gradient-to-br from-gray-900 to-gray-800 p-6 rounded-2xl border border-gray-800 hover:border-emerald-500/50 hover:shadow-xl hover:shadow-emerald-500/20 transition-all duration-300 hover:-translate-y-1 group">
+          <div class="text-4xl mb-4">🌐</div>
+          <h3 class="text-lg font-semibold mb-2 text-emerald-400 group-hover:text-emerald-300 transition-colors">LinkedIn</h3>
+          <p class="text-sm text-gray-400">linkedin.com/in/maveeshah</p>
+        </a>
+      </div>
+
+      <div class="bg-gray-900/50 p-8 rounded-2xl border border-gray-800 max-w-2xl mx-auto">
+        <h2 class="text-2xl font-semibold mb-4 text-emerald-400">Let's Connect</h2>
+        <p class="text-gray-300 leading-relaxed">
+          Whether you're looking for ERPNext customization, Frappe app development, or Python automation solutions, 
+          I'd love to hear about your project. Feel free to reach out via email or connect on social platforms.
+        </p>
+      </div>
     </section>
+  </main>
+
+  <footer class="text-center py-8 border-t border-gray-800 text-sm text-gray-500 mt-16">
+    <p>© 2025 Ameer Muavia Shah — Frappe | ERPNext | Python</p>
+  </footer>
 </body>
 </html>
