--- a/projects.html
+++ b/projects.html
@@ -1,27 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Featured projects by Ameer Muavia Shah - ERPNext healthcare platforms, real estate ERP systems, and Python automation solutions." />
+  <title>Projects | Ameer Muavia Shah</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    .animate-fade-in {
+      animation: fadeIn 0.6s ease-in-out forwards;
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+    #mobile-menu-button.active span:nth-child(1) {
+      transform: rotate(45deg) translate(5px, 5px);
+    }
+    #mobile-menu-button.active span:nth-child(2) {
+      opacity: 0;
+    }
+    #mobile-menu-button.active span:nth-child(3) {
+      transform: rotate(-45deg) translate(7px, -6px);
+    }
+  </style>
+  <script defer src="script.js"></script>
 </head>
-<body>
-    <header>
-        <h1>My Projects</h1>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
-        </nav>
-    </header>
-    <section>
-        <h2>Notable Projects</h2>
-        <ul>
-            <li><strong>Danisa:</strong> Attendance and Cargo Management tool for effective handling.</li>
-            <li><strong>Relationship Enrichment:</strong> Engagement tracking for couples.</li>
-            <li><strong>Bank of Punjab Customizations:</strong> HRMS and Loan Module adaptations for ERPNext.</li>
-        </ul>
+
+<body class="bg-gray-950 text-gray-100 font-sans antialiased">
+  <header class="sticky top-0 z-50 bg-gray-950/95 backdrop-blur-sm border-b border-gray-800">
+    <div class="flex justify-between items-center px-4 sm:px-8 py-5">
+      <a href="index.html" class="text-2xl font-bold text-emerald-400 hover:text-emerald-300 transition-colors">
+        Ameer Muavia Shah
+      </a>
+      <nav class="hidden md:flex space-x-6 text-gray-300">
+        <a href="index.html" class="hover:text-emerald-400 transition-colors">Home</a>
+        <a href="projects.html" class="hover:text-emerald-400 transition-colors active">Projects</a>
+        <a href="about.html" class="hover:text-emerald-400 transition-colors">About</a>
+        <a href="contact.html" class="hover:text-emerald-400 transition-colors">Contact</a>
+      </nav>
+      <button id="mobile-menu-button" class="md:hidden flex flex-col space-y-1.5 w-6 h-6 focus:outline-none">
+        <span class="block w-full h-0.5 bg-emerald-400 transition-all"></span>
+        <span class="block w-full h-0.5 bg-emerald-400 transition-all"></span>
+        <span class="block w-full h-0.5 bg-emerald-400 transition-all"></span>
+      </button>
+    </div>
+    <nav id="mobile-menu" class="hidden md:hidden border-t border-gray-800 bg-gray-950/98 backdrop-blur-sm">
+      <div class="flex flex-col px-4 py-4 space-y-3">
+        <a href="index.html" class="text-gray-300 hover:text-emerald-400 transition-colors">Home</a>
+        <a href="projects.html" class="text-gray-300 hover:text-emerald-400 transition-colors active">Projects</a>
+        <a href="about.html" class="text-gray-300 hover:text-emerald-400 transition-colors">About</a>
+        <a href="contact.html" class="text-gray-300 hover:text-emerald-400 transition-colors">Contact</a>
+      </div>
+    </nav>
+  </header>
+
+  <main class="max-w-7xl mx-auto py-12 sm:py-20 px-6">
+    <section class="fade-in-on-scroll">
+      <h1 class="text-4xl sm:text-5xl font-bold mb-4 text-emerald-400 text-center">Featured Projects</h1>
+      <p class="text-gray-400 text-center mb-12 max-w-2xl mx-auto">
+        Enterprise-grade ERP solutions and automation tools built with ERPNext, Frappe Framework, and Python.
+      </p>
+
+      <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6 lg:gap-8">
+        <div class="bg-gradient-to-br from-gray-900 to-gray-800 p-6 rounded-2xl border border-gray-800 hover:border-emerald-500/50 hover:shadow-xl hover:shadow-emerald-500/20 transition-all duration-300 hover:-translate-y-1 fade-in-on-scroll">
+          <div class="mb-4">
+            <div class="w-12 h-12 bg-emerald-500/20 rounded-lg flex items-center justify-center mb-4">
+              <span class="text-2xl">🏥</span>
+            </div>
+            <h3 class="text-xl font-semibold mb-3 text-emerald-400">Grow Healthy Platform</h3>
+          </div>
+          <p class="text-gray-400 text-sm mb-4 leading-relaxed">
+            ERPNext-based healthcare ERP for research institutes, with admin dashboards and patient health tracking modules.
+          </p>
+          <div class="flex flex-wrap gap-2 mb-4">
+            <span class="px-2 py-1 bg-emerald-500/20 text-emerald-400 text-xs rounded">ERPNext</span>
+            <span class="px-2 py-1 bg-emerald-500/20 text-emerald-400 text-xs rounded">Healthcare</span>
+            <span class="px-2 py-1 bg-emerald-500/20 text-emerald-400 text-xs rounded">Dashboards</span>
+          </div>
+          <a href="#" class="text-emerald-400 text-sm font-medium hover:text-emerald-300 transition-colors inline-flex items-center gap-1">
+            View Project <span>→</span>
+          </a>
+        </div>
+
+        <div class="bg-gradient-to-br from-gray-900 to-gray-800 p-6 rounded-2xl border border-gray-800 hover:border-emerald-500/50 hover:shadow-xl hover:shadow-emerald-500/20 transition-all duration-300 hover:-translate-y-1 fade-in-on-scroll" style="animation-delay: 0.1s">
+          <div class="mb-4">
+            <div class="w-12 h-12 bg-emerald-500/20 rounded-lg flex items-center justify-center mb-4">
+              <span class="text-2xl">🏢</span>
+            </div>
+            <h3 class="text-xl font-semibold mb-3 text-emerald-400">Real Estate ERP</h3>
+          </div>
+          <p class="text-gray-400 text-sm mb-4 leading-relaxed">
+            Custom Frappe app for property management, project accounting, and approval workflows.
+          </p>
+          <div class="flex flex-wrap gap-2 mb-4">
+            <span class="px-2 py-1 bg-emerald-500/20 text-emerald-400 text-xs rounded">Frappe</span>
+            <span class="px-2 py-1 bg-emerald-500/20 text-emerald-400 text-xs rounded">Real Estate</span>
+            <span class="px-2 py-1 bg-emerald-500/20 text-emerald-400 text-xs rounded">Workflows</span>
+          </div>
+          <a href="#" class="text-emerald-400 text-sm font-medium hover:text-emerald-300 transition-colors inline-flex items-center gap-1">
+            View Project <span>→</span>
+          </a>
+        </div>
+
+        <div class="bg-gradient-to-br from-gray-900 to-gray-800 p-6 rounded-2xl border border-gray-800 hover:border-emerald-500/50 hover:shadow-xl hover:shadow-emerald-500/20 transition-all duration-300 hover:-translate-y-1 fade-in-on-scroll" style="animation-delay: 0.2s">
+          <div class="mb-4">
+            <div class="w-12 h-12 bg-emerald-500/20 rounded-lg flex items-center justify-center mb-4">
+              <span class="text-2xl">⚙️</span>
+            </div>
+            <h3 class="text-xl font-semibold mb-3 text-emerald-400">Automation Suite</h3>
+          </div>
+          <p class="text-gray-400 text-sm mb-4 leading-relaxed">
+            Python-based automation toolkit integrated with ERPNext to streamline repetitive admin and HR tasks.
+          </p>
+          <div class="flex flex-wrap gap-2 mb-4">
+            <span class="px-2 py-1 bg-emerald-500/20 text-emerald-400 text-xs rounded">Python</span>
+            <span class="px-2 py-1 bg-emerald-500/20 text-emerald-400 text-xs rounded">Automation</span>
+            <span class="px-2 py-1 bg-emerald-500/20 text-emerald-400 text-xs rounded">Integration</span>
+          </div>
+          <a href="#" class="text-emerald-400 text-sm font-medium hover:text-emerald-300 transition-colors inline-flex items-center gap-1">
+            View Project <span>→</span>
+          </a>
+        </div>
+      </div>
     </section>
+  </main>
+
+  <footer class="text-center py-8 border-t border-gray-800 text-sm text-gray-500 mt-16">
+    <p>© 2025 Ameer Muavia Shah — Frappe | ERPNext | Python</p>
+  </footer>
 </body>
 </html>
