Enhance portfolio website with new design elements, improved project cards, and a modal system for project details. Updated styles for better responsiveness and added animations for a more engaging user experience.

--- a/about.html
+++ b/about.html
@@ -57,45 +57,86 @@
 
   <main class="max-w-5xl mx-auto py-12 sm:py-20 px-6">
     <section class="fade-in-on-scroll">
+      <div class="mb-6">
+        <div class="inline-block px-4 py-2 bg-emerald-500/10 border border-emerald-500/20 rounded-full mb-6">
+          <span class="text-emerald-400 text-sm font-medium">About Me</span>
+        </div>
+      </div>
       <h1 class="text-4xl sm:text-5xl font-bold mb-8 text-emerald-400">About Me</h1>
       <div class="space-y-6 text-gray-300 leading-relaxed">
         <p class="text-lg">
-          I'm a Software Engineer specializing in <strong class="text-emerald-400">ERPNext</strong> and <strong class="text-emerald-400">Frappe Framework</strong>, with <strong class="text-emerald-400">5+ years</strong> of experience building enterprise-grade ERP solutions across construction, healthcare, and manufacturing sectors.
+          I'm a Software Engineer specializing in <strong class="text-emerald-400 font-semibold">ERPNext</strong> and <strong class="text-emerald-400 font-semibold">Frappe Framework</strong>, with <strong class="text-emerald-400 font-semibold">5+ years</strong> of experience building enterprise-grade ERP solutions across construction, healthcare, and manufacturing sectors.
         </p>
         <p class="text-lg">
           I design and implement complete systems — from workflows, reporting dashboards, and data automation to API integrations — delivering scalable, maintainable, and secure ERP environments.
         </p>
         <p class="text-lg">
-          Outside of work, I love exploring automotive builds, watching anime, and spending time with my two daughters, <strong class="text-emerald-400">Rumaisa</strong> and <strong class="text-emerald-400">Furia'h</strong>.
+          Outside of work, I love exploring automotive builds, watching anime, and spending time with my two daughters, <strong class="text-emerald-400 font-semibold">Rumaisa</strong> and <strong class="text-emerald-400 font-semibold">Furia'h</strong>.
         </p>
       </div>
     </section>
 
-    <section class="mt-16 fade-in-on-scroll">
-      <h2 class="text-3xl sm:text-4xl font-bold mb-8 text-emerald-400">Skills & Expertise</h2>
+    <section class="mt-20 fade-in-on-scroll">
+      <h2 class="text-3xl sm:text-4xl font-bold mb-10 text-emerald-400">Skills & Expertise</h2>
       <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6">
-        <div class="bg-gray-900 p-6 rounded-xl border border-gray-800 hover:border-emerald-500/50 transition-all">
-          <h3 class="text-xl font-semibold mb-3 text-emerald-400">ERP Platforms</h3>
-          <ul class="space-y-2 text-gray-400">
-            <li>• ERPNext</li>
-            <li>• Frappe Framework</li>
-            <li>• Custom ERP Development</li>
+        <div class="bg-gradient-to-br from-gray-900/90 to-gray-800/90 backdrop-blur-sm p-6 rounded-xl border border-gray-800/50 hover:border-emerald-500/50 hover:shadow-xl hover:shadow-emerald-500/10 transition-all duration-300 hover:-translate-y-1">
+          <div class="w-12 h-12 bg-emerald-500/20 rounded-lg flex items-center justify-center mb-4">
+            <span class="text-2xl">💼</span>
+          </div>
+          <h3 class="text-xl font-semibold mb-4 text-emerald-400">ERP Platforms</h3>
+          <ul class="space-y-2.5 text-gray-400">
+            <li class="flex items-center gap-2">
+              <span class="text-emerald-400">▸</span>
+              <span>ERPNext</span>
+            </li>
+            <li class="flex items-center gap-2">
+              <span class="text-emerald-400">▸</span>
+              <span>Frappe Framework</span>
+            </li>
+            <li class="flex items-center gap-2">
+              <span class="text-emerald-400">▸</span>
+              <span>Custom ERP Development</span>
+            </li>
           </ul>
         </div>
-        <div class="bg-gray-900 p-6 rounded-xl border border-gray-800 hover:border-emerald-500/50 transition-all">
-          <h3 class="text-xl font-semibold mb-3 text-emerald-400">Programming</h3>
-          <ul class="space-y-2 text-gray-400">
-            <li>• Python</li>
-            <li>• JavaScript</li>
-            <li>• API Development</li>
+        <div class="bg-gradient-to-br from-gray-900/90 to-gray-800/90 backdrop-blur-sm p-6 rounded-xl border border-gray-800/50 hover:border-emerald-500/50 hover:shadow-xl hover:shadow-emerald-500/10 transition-all duration-300 hover:-translate-y-1">
+          <div class="w-12 h-12 bg-emerald-500/20 rounded-lg flex items-center justify-center mb-4">
+            <span class="text-2xl">💻</span>
+          </div>
+          <h3 class="text-xl font-semibold mb-4 text-emerald-400">Programming</h3>
+          <ul class="space-y-2.5 text-gray-400">
+            <li class="flex items-center gap-2">
+              <span class="text-emerald-400">▸</span>
+              <span>Python</span>
+            </li>
+            <li class="flex items-center gap-2">
+              <span class="text-emerald-400">▸</span>
+              <span>JavaScript</span>
+            </li>
+            <li class="flex items-center gap-2">
+              <span class="text-emerald-400">▸</span>
+              <span>API Development</span>
+            </li>
           </ul>
         </div>
-        <div class="bg-gray-900 p-6 rounded-xl border border-gray-800 hover:border-emerald-500/50 transition-all">
-          <h3 class="text-xl font-semibold mb-3 text-emerald-400">Specializations</h3>
-          <ul class="space-y-2 text-gray-400">
-            <li>• Automation & Integration</li>
-            <li>• Workflow Design</li>
-            <li>• Data Analytics</li>
+        <div class="bg-gradient-to-br from-gray-900/90 to-gray-800/90 backdrop-blur-sm p-6 rounded-xl border border-gray-800/50 hover:border-emerald-500/50 hover:shadow-xl hover:shadow-emerald-500/10 transition-all duration-300 hover:-translate-y-1">
+          <div class="w-12 h-12 bg-emerald-500/20 rounded-lg flex items-center justify-center mb-4">
+            <span class="text-2xl">⚡</span>
+          </div>
+          <h3 class="text-xl font-semibold mb-4 text-emerald-400">Specializations</h3>
+          <ul class="space-y-2.5 text-gray-400">
+            <li class="flex items-center gap-2">
+              <span class="text-emerald-400">▸</span>
+              <span>Automation & Integration</span>
+            </li>
+            <li class="flex items-center gap-2">
+              <span class="text-emerald-400">▸</span>
+              <span>Workflow Design</span>
+            </li>
+            <li class="flex items-center gap-2">
+              <span class="text-emerald-400">▸</span>
+              <span>Data Analytics</span>
+            </li>
           </ul>
         </div>
       </div>
