--- a/index.html
+++ b/index.html
@@ -92,21 +92,27 @@
   <main class="min-h-[85vh]">
     <section class="flex flex-col items-center justify-center text-center min-h-[85vh] px-4 relative overflow-hidden">
       <div class="absolute inset-0 gradient-bg opacity-10"></div>
+      <div class="absolute inset-0 bg-[radial-gradient(circle_at_50%_50%,rgba(16,185,129,0.1),transparent_50%)]"></div>
       <div class="relative z-10 max-w-4xl fade-in-on-scroll">
+        <div class="mb-8 animate-slide-up">
+          <div class="inline-block px-4 py-2 bg-emerald-500/10 border border-emerald-500/20 rounded-full mb-6">
+            <span class="text-emerald-400 text-sm font-medium">Software Engineer & ERPNext Specialist</span>
+          </div>
+        </div>
         <h1 class="text-5xl sm:text-6xl md:text-7xl font-bold mb-6 leading-tight animate-slide-up">
-          Hi, I'm <span class="text-emerald-400 bg-gradient-to-r from-emerald-400 to-teal-400 bg-clip-text text-transparent">Ameer Muavia Shah</span>
+          Hi, I'm <span class="text-emerald-400 bg-gradient-to-r from-emerald-400 via-teal-400 to-emerald-500 bg-clip-text text-transparent">Ameer Muavia Shah</span>
         </h1>
         <p class="text-xl sm:text-2xl text-gray-300 mb-4 animate-slide-up" style="animation-delay: 0.2s">
           Software Engineer
         </p>
-        <p class="text-lg sm:text-xl text-gray-400 mb-10 animate-slide-up" style="animation-delay: 0.4s">
+        <p class="text-lg sm:text-xl text-gray-400 mb-12 animate-slide-up" style="animation-delay: 0.4s">
           Frappe & ERPNext Specialist | Python | Automation & Integration Expert
         </p>
         <div class="flex flex-col sm:flex-row gap-4 justify-center items-center animate-slide-up" style="animation-delay: 0.6s">
-          <a href="projects.html" class="px-8 py-3.5 bg-emerald-500 text-black font-semibold rounded-full hover:bg-emerald-400 hover:scale-105 transition-all shadow-lg shadow-emerald-500/30">
+          <a href="projects.html" class="px-8 py-3.5 bg-emerald-500 text-black font-semibold rounded-full hover:bg-emerald-400 hover:scale-105 transition-all shadow-lg shadow-emerald-500/30 hover:shadow-emerald-500/50">
             View My Work
           </a>
-          <a href="contact.html" class="px-8 py-3.5 border-2 border-emerald-400 text-emerald-400 font-semibold rounded-full hover:bg-emerald-400 hover:text-black transition-all">
+          <a href="contact.html" class="px-8 py-3.5 border-2 border-emerald-400 text-emerald-400 font-semibold rounded-full hover:bg-emerald-400 hover:text-black transition-all hover:scale-105">
             Get in Touch
           </a>
         </div>
