--- a/contact.html
+++ b/contact.html
@@ -57,32 +57,37 @@
 
   <main class="max-w-4xl mx-auto py-12 sm:py-20 px-6">
     <section class="text-center fade-in-on-scroll">
+      <div class="mb-6">
+        <div class="inline-block px-4 py-2 bg-emerald-500/10 border border-emerald-500/20 rounded-full mb-6">
+          <span class="text-emerald-400 text-sm font-medium">Get in Touch</span>
+        </div>
+      </div>
       <h1 class="text-4xl sm:text-5xl font-bold mb-6 text-emerald-400">Get in Touch</h1>
       <p class="text-lg text-gray-300 mb-12 max-w-2xl mx-auto">
         I'm open to freelance work, collaboration, or just tech conversations. Let's build something amazing together!
       </p>
 
       <div class="grid sm:grid-cols-3 gap-6 mb-12">
-        <a href="mailto:maveeshah@gmail.com" class="bg-gradient-to-br from-gray-900 to-gray-800 p-6 rounded-2xl border border-gray-800 hover:border-emerald-500/50 hover:shadow-xl hover:shadow-emerald-500/20 transition-all duration-300 hover:-translate-y-1 group">
-          <div class="text-4xl mb-4">📧</div>
+        <a href="mailto:maveeshah@gmail.com" class="bg-gradient-to-br from-gray-900/90 via-gray-900/80 to-gray-800/90 backdrop-blur-sm p-6 rounded-2xl border border-gray-800/50 hover:border-emerald-500/50 hover:shadow-2xl hover:shadow-emerald-500/10 transition-all duration-300 hover:-translate-y-2 group">
+          <div class="text-5xl mb-4 group-hover:scale-110 transition-transform duration-300">📧</div>
           <h3 class="text-lg font-semibold mb-2 text-emerald-400 group-hover:text-emerald-300 transition-colors">Email</h3>
           <p class="text-sm text-gray-400 break-all">maveeshah@gmail.com</p>
         </a>
 
-        <a href="https://github.com/maveeshah" target="_blank" rel="noopener noreferrer" class="bg-gradient-to-br from-gray-900 to-gray-800 p-6 rounded-2xl border border-gray-800 hover:border-emerald-500/50 hover:shadow-xl hover:shadow-emerald-500/20 transition-all duration-300 hover:-translate-y-1 group">
-          <div class="text-4xl mb-4">💼</div>
+        <a href="https://github.com/maveeshah" target="_blank" rel="noopener noreferrer" class="bg-gradient-to-br from-gray-900/90 via-gray-900/80 to-gray-800/90 backdrop-blur-sm p-6 rounded-2xl border border-gray-800/50 hover:border-emerald-500/50 hover:shadow-2xl hover:shadow-emerald-500/10 transition-all duration-300 hover:-translate-y-2 group">
+          <div class="text-5xl mb-4 group-hover:scale-110 transition-transform duration-300">💼</div>
           <h3 class="text-lg font-semibold mb-2 text-emerald-400 group-hover:text-emerald-300 transition-colors">GitHub</h3>
           <p class="text-sm text-gray-400">github.com/maveeshah</p>
         </a>
 
-        <a href="https://linkedin.com/in/maveeshah" target="_blank" rel="noopener noreferrer" class="bg-gradient-to-br from-gray-900 to-gray-800 p-6 rounded-2xl border border-gray-800 hover:border-emerald-500/50 hover:shadow-xl hover:shadow-emerald-500/20 transition-all duration-300 hover:-translate-y-1 group">
-          <div class="text-4xl mb-4">🌐</div>
+        <a href="https://linkedin.com/in/maveeshah" target="_blank" rel="noopener noreferrer" class="bg-gradient-to-br from-gray-900/90 via-gray-900/80 to-gray-800/90 backdrop-blur-sm p-6 rounded-2xl border border-gray-800/50 hover:border-emerald-500/50 hover:shadow-2xl hover:shadow-emerald-500/10 transition-all duration-300 hover:-translate-y-2 group">
+          <div class="text-5xl mb-4 group-hover:scale-110 transition-transform duration-300">🌐</div>
           <h3 class="text-lg font-semibold mb-2 text-emerald-400 group-hover:text-emerald-300 transition-colors">LinkedIn</h3>
           <p class="text-sm text-gray-400">linkedin.com/in/maveeshah</p>
         </a>
       </div>
 
-      <div class="bg-gray-900/50 p-8 rounded-2xl border border-gray-800 max-w-2xl mx-auto">
+      <div class="bg-gradient-to-br from-gray-900/50 via-gray-900/40 to-gray-800/50 backdrop-blur-sm p-8 rounded-2xl border border-gray-800/50 max-w-2xl mx-auto hover:border-emerald-500/30 transition-all">
         <h2 class="text-2xl font-semibold mb-4 text-emerald-400">Let's Connect</h2>
         <p class="text-gray-300 leading-relaxed">
           Whether you're looking for ERPNext customization, Frappe app development, or Python automation solutions, 
