Refactor project modal system in script.js to improve functionality and readability. Added project data for '', implemented guards for modal existence, and streamlined event listener setup for better performance.

--- a/projects.html
+++ b/projects.html
@@ -83,7 +83,7 @@
         Enterprise-grade ERP solutions and automation tools built with ERPNext, Frappe Framework, and Python.
       </p>
 
-      <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6 lg:gap-8">
+      <!-- <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6 lg:gap-8">
         <div class="bg-gradient-to-br from-gray-900/90 via-gray-900/80 to-gray-800/90 backdrop-blur-sm p-6 rounded-2xl border border-gray-800/50 hover:border-emerald-500/50 hover:shadow-2xl hover:shadow-emerald-500/10 transition-all duration-300 hover:-translate-y-2 fade-in-on-scroll group cursor-pointer" data-project="grow-healthy">
           <div class="mb-4">
             <div class="w-14 h-14 bg-gradient-to-br from-emerald-500/20 to-teal-500/20 rounded-xl flex items-center justify-center mb-4 group-hover:scale-110 transition-transform duration-300">
@@ -143,7 +143,7 @@
             View Project <span class="text-lg">→</span>
           </button>
         </div>
-      </div>
+      </div> -->
     </section>
   </main>
 
